--- a/src/content/docs/drs/holsters/melee.mdx
+++ b/src/content/docs/drs/holsters/melee.mdx
@@ -15,244 +15,428 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
+Melee DPS are the powerhouses of Delubrum Reginae. Along with being some of the highest DPS roles, they are given arguably the strongest (and easiest) to use actions.
+Both actions should be combined together every 2 minute window to maximize their effectiveness.
 
-    Melee DPS are the powerhouses of Delubrum Reginae. Along with being some of the highest DPS roles, they are given arguably the strongest (and easiest) to use actions.
-    Both actions should be combined together every 2 minute window to maximize their effectiveness. 
-    <br/><hr/>
+Each holster is split into two sections, one as a "pre-load"  holster and a "instance ready" holster. The "pre-load" is for when you first get into the instance. It will contain your pure essence, reraiser, and actions that you will slot in or refresh charges on.
+The "instance ready" holster has _everything_ you will need for the entire instance. It should often contain extra reraisers, spare copies of lost actions you need, and light curtains. It is strongly encouraged that you fill your holster to as close as full as you can.
+
+Some suggestions on what to include to fill space: **Light Curtains**, extra **Resistance Reraisers**, and **Resistance Potions**.
+
+Your **Pure Essence of the Duelist** synergizes with **Banner of Honored Sacrifice** to extend the banner's duration to a whopping 30 seconds! It also reduces the damage taken from ~16k to merely 1 (one) damage per tick.
+
+:::note[Pure Essences]
+You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
+:::
+<br/><hr/>
 
 ### Basic Melee DPS Holster
-<table class="holster-table">
-    <col width="75px" />
-    <col width="300px" />
-    <col width="65px" />
-    <col width="65px" />
-  <tr>
-    <th style="border: none; background-color: transparent; visibility: hidden;"/>
-    <th>Lost Action</th>
-    <th>Qty.</th>
-    <th>Wt.</th>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/fop.png"/></td>
-    <td>**Lost Font of Power**</td>
-    <td>1</td>
-    <td>25</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
-    <td>**Banner of Honored Sacrifice**</td>
-    <td>1</td>
-    <td>10</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
-    <td>**Resistance Reraiser**</td>
-    <td>7</td>
-    <td>56</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
-    <td>**Light Curtain**</td>
-    <td>2</td>
-    <td>2</td>
-  </tr>
-  <tr style="background-color: transparent">
-    <td style="border: none;"/>
-    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
-    <td>93</td>
-  </tr>
-</table>
+This holster is the bread of butter of a melee DPS. Using Font of Power and Banner of Honored Sacrifice together every **2 minute** in the raid buff window will yield the best results. This is the most common bag for new people to bring as it's
+economic and easiest to use.
+
+<div class="two-holster-tables" id="dps">
+  <table class="dps">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
+      <td colspan="3">**Lost Font of Power**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/hsac.png"/></td>
+      <td colspan="3">**Banner of Honored Sacrifice**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/duelist.png"/></td>
+      <td colspan="3">**Pure Essence of the Duelist**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="dps">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
+      <td >**Lost Font of Power**</td>
+      <td>1</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/hsac.png"/></td>
+      <td>**Banner of Honored Sacrifice**</td>
+      <td>1</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>7</td>
+      <td>56</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>93</td>
+    </tr>
+  </table>
+</div>
 <br/><hr/>
 
 ### Basic Rend Armor Holster
-<table class="holster-table">
-    <col width="75px" />
-    <col width="300px" />
-    <col width="65px" />
-    <col width="65px" />
-  <tr>
-    <th style="border: none; background-color: transparent; visibility: hidden;"/>
-    <th>Lost Action</th>
-    <th>Qty.</th>
-    <th>Wt.</th>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/fop.png"/></td>
-    <td>**Lost Font of Power**</td>
-    <td>1</td>
-    <td>25</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/rend.png"/></td>
-    <td>**Banner of Honored Sacrifice**</td>
-    <td>3</td>
-    <td>24</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
-    <td>**Resistance Reraiser**</td>
-    <td>6</td>
-    <td>48</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
-    <td>**Light Curtain**</td>
-    <td>2</td>
-    <td>2</td>
-  </tr>
-  <tr style="background-color: transparent">
-    <td style="border: none;"/>
-    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
-    <td>99</td>
-  </tr>
-</table>
-:::danger[Lost Rend Armor]
-Two players in the alliance will be assigned to run **Lost Rend Armor**. If assigned, you will replace <ActionIcon icon="hsac"/>**Banner of Honored Sacrifice** with <ActionIcon icon="rend"/>**Lost Rend Armor** and alternate uses with the other assigned rend
-user to maintain 100% buff uptime on the boss(es).
+A supportive variant of the melee DPS. Renders provide a significant 10% increase to the overall raid's damage. Two players in the alliance will be assigned to run Lost Rend Armor. If assigned, 
+you will replace hsac Banner of Honored Sacrifice with rend Lost Rend Armor and alternate uses with the other assigned rend armor user to maintain 100% buff uptime on the boss(es).
+
+<div class="two-holster-tables">
+  <table class="dps">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
+      <td colspan="3">**Lost Font of Power**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/rend.png"/></td>
+      <td colspan="3">**Lost Rend Armor**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/duelist.png"/></td>
+      <td colspan="3">**Pure Essence of the Duelist**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="dps">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/fop.png"/></td>
+      <td>**Lost Font of Power**</td>
+      <td>1</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/rend.png"/></td>
+      <td>**Lost Rend Armor**</td>
+      <td>3</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>6</td>
+      <td>48</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+:::tip[Lost Rend Armor]
+This is a **gap closer**! Using this action will send you towards the target and put you on the edge of their hit box. Rend is also an 10 yalm AoE! Look for good opprotunities to use it in general combat!
 :::
 <br/><hr/>
 
 ### Beginner Mimic Holster
-<table class="holster-table">
-    <col width="75px" />
-    <col width="300px" />
-    <col width="65px" />
-    <col width="65px" />
-  <tr>
-    <th style="border: none; background-color: transparent; visibility: hidden;"/>
-    <th>Lost Action</th>
-    <th>Qty.</th>
-    <th>Wt.</th>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
-    <td>**Mimic**</td>
-    <td>2</td>
-    <td>24</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
-    <td>**Banner of Honored Sacrifice**</td>
-    <td>2</td>
-    <td>20</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
-    <td>**Resistance Reraiser**</td>
-    <td>6</td>
-    <td>48</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
-    <td>**Light Curtain**</td>
-    <td>2</td>
-    <td>2</td>
-  </tr>
-  <tr style="background-color: transparent">
-    <td style="border: none;"/>
-    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
-    <td>94</td>
-  </tr>
-</table>
+This holster will help you understand the signifigance and power of the **Mimic** action. It also has some extra wiggle room to maybe try out "Excellence Chaining". The main goal is for you to just see how **Mimic** works.
+If you're looking for guides on how to Mimic, please see the note below the holsters. If you're looking for a guide on how to Excellence Chain, please see: \<link goes here\>
+
+<div class="two-holster-tables">
+  <table class="dps">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
+      <td colspan="3">**Lost Font of Power**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/hsac.png"/></td>
+      <td colspan="3">**Banner of Honored Sacrifice**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/duelist.png"/></td>
+      <td colspan="3">**Pure Essence of the Duelist**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="dps">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+      <td>**Mimic**</td>
+      <td>2</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+      <td>**Banner of Honored Sacrifice**</td>
+      <td>2</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>6</td>
+      <td>48</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>94</td>
+    </tr>
+  </table>
+</div>
 :::caution[How To Mimic]
 <ActionIcon icon="mimic"/>**Mimic** is used to copy the actions of another player _and_ fully refresh your actions at the same time! To use it, first slot in <ActionIcon icon="mimic"/>**Mimic** and target the player you wish to copy the actions from.
-**Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. 
+**Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
 
-Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
+**Extra note:** The target will not be effected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
 :::
 <br/><hr/>
 
 ### Excellence Melee
-<table class="holster-table">
-    <col width="75px" />
-    <col width="300px" />
-    <col width="65px" />
-    <col width="65px" />
-  <tr>
-    <th style="border: none; background-color: transparent; visibility: hidden;"/>
-    <th>Lost Action</th>
-    <th>Qty.</th>
-    <th>Wt.</th>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
-    <td>**Mimic**</td>
-    <td>3</td>
-    <td>36</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
-    <td>**Banner of Honored Sacrifice**</td>
-    <td>4</td>
-    <td>40</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
-    <td>**Resistance Reraiser**</td>
-    <td>2</td>
-    <td>16</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
-    <td>**Light Curtain**</td>
-    <td>2</td>
-    <td>2</td>
-  </tr>
-  <tr style="background-color: transparent">
-    <td style="border: none;"/>
-    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
-    <td>94</td>
-  </tr>
-</table>
+This is truly the easiest and most effective way to output as much DPS as you can on **any role**, outside of one exception. While this is a rather heavy and expensive bag, it's effects cannot be understated. Mimic is used before every major Non-Trinity Seeker fight to
+refresh **Font of Power** and get **Lost Excellence** back. 
+
+During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Banner of Honored Sacrifice**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Banner of Honored Sacrifice**
+together. From there, the fight will proceed as normal with you pressing Font/Banner during every **2 minute** raid buff window.
+
+It is important that you overslot **Excellence** with your **Banner of Honored Sacrifice**. Holding **Excellence** through the whole instance is a massive DPS loss and also could potentially waste the assigned batteries's Excellence plates. 
+<div class="two-holster-tables">
+  <table class="dps">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
+      <td colspan="3">**Lost Font of Power**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/excellence.png"/></td>
+      <td colspan="3">**Lost Excellence**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/duelist.png"/></td>
+      <td colspan="3">**Pure Essence of the Duelist**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="dps">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+      <td>**Mimic**</td>
+      <td>3</td>
+      <td>36</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+      <td>**Banner of Honored Sacrifice**</td>
+      <td>4</td>
+      <td>40</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>2</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>94</td>
+    </tr>
+  </table>
+</div>
+
+:::note[Want More Damage?]
+Drop the reraisers and add two more **Banner of Honored Sacrifice**. You can reslot another Banner during your opener to extend it's duration for the entire length of Excellence's.
+:::
 <br/><hr/>
 
 ### Excellence Melee Battery
-<table class="holster-table">
-    <col width="75px" />
-    <col width="300px" />
-    <col width="65px" />
-    <col width="65px" />
-  <tr>
-    <th style="border: none; background-color: transparent; visibility: hidden;"/>
-    <th>Lost Action</th>
-    <th>Qty.</th>
-    <th>Wt.</th>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
-    <td>**Mimic**</td>
-    <td>2</td>
-    <td>24</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/excellence.png"/></td>
-    <td>**Lost Excellence**</td>
-    <td>1</td>
-    <td>25</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
-    <td>**Banner of Honored Sacrifice**</td>
-    <td>4</td>
-    <td>40</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
-    <td>**Resistance Reraiser**</td>
-    <td>1</td>
-    <td>8</td>
-  </tr>
-  <tr>
-    <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
-    <td>**Light Curtain**</td>
-    <td>2</td>
-    <td>2</td>
-  </tr>
-  <tr style="background-color: transparent">
-    <td style="border: none;"/>
-    <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
-    <td>99</td>
-  </tr>
-</table>
+This holster helps carry **Lost Excellence** through the entire instance. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
+One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Banner of Honored Sacrifice** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
+signify that you are ready to be mimicked.
+
+During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Banner of Honored Sacrifice**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Banner of Honored Sacrifice**
+together. From there, the fight will proceed as normal with you pressing Font/Banner during every **2 minute** raid buff window.
+<div class="two-holster-tables">
+  <table class="dps">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fop.png"/></td>
+      <td colspan="3">**Lost Font of Power**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/excellence.png"/></td>
+      <td colspan="3">**Lost Excellence**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/duelist.png"/></td>
+      <td colspan="3">**Pure Essence of the Duelist**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="dps">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+      <td>**Mimic**</td>
+      <td>2</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/excellence.png"/></td>
+      <td>**Lost Excellence**</td>
+      <td>1</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/hsac.png"/></td>
+      <td>**Banner of Honored Sacrifice**</td>
+      <td>4</td>
+      <td>40</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>1</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+
+:::danger[Slotting Excellence]
+Make sure to slot in your Excellence at the assigned fight! Slotting it any earlier could cause some awkwardness and force you to hold off on overslotting Excellence for an amount of time.
+:::
 
 <Footer />
